--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "ws": "^8.18.2",
     "yup": "^1.6.1"
   },
