--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.2",
     "yup": "^1.6.1"
