--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-query-devtools": "^5.75.5",
     "axios": "^1.9.0",
+    "html2canvas": "^1.4.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.5.0",
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
